<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/label_income"
        android:icon="@drawable/ic_money_24"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_show_current_income"
                android:title="@string/label_income"
                android:icon="@drawable/ic_list_24"
                android:orderInCategory="1"/>
            <item
                android:id="@+id/item_add_funds"
                android:icon="@drawable/ic_plus_24"
                android:title="@string/label_add_funds"
                android:orderInCategory="2"/>
        </menu>
    </item>
    <item
        android:id="@+id/item_display_recurring_orders"
        android:title="@string/label_recurring_orders"/>
    <item android:title="@string/label_file">
        <menu>
            <item
                android:id="@+id/item_save_accounts"
                android:title="@string/label_save_accounts"
                android:orderInCategory="1"/>
            <item
                android:id="@+id/item_load_accounts"
                android:title="@string/label_load_accounts"
                android:orderInCategory="2" />
            <item
                android:id="@+id/item_edit"
                android:title="@string/label_edit_savefile"
                android:orderInCategory="3" />
            <item
                android:id="@+id/item_integrity_check"
                android:title="@string/label_integrity_check"
                android:orderInCategory="4" />
        </menu>
    </item>
    <item android:title="@string/label_sync">
        <menu>
            <item
                android:id="@+id/item_backup_all"
                android:title="@string/label_backup_all"
                android:orderInCategory="1" />
            <item
                android:id="@+id/item_restore_all"
                android:title="@string/label_restore_all"
                android:orderInCategory="2" />
            <item
                android:id="@+id/item_sync_push"
                android:title="@string/label_sync_push"
                android:orderInCategory="3" />
            <item
                android:id="@+id/item_sync_pull"
                android:title="@string/label_sync_pull"
                android:orderInCategory="4" />
            <item
                android:id="@+id/item_sync_change_folder"
                android:title="@string/label_sync_change_folder"
                android:orderInCategory="5" />
        </menu>
    </item>
    <item
        android:id="@+id/item_settings"
        android:title="@string/label_settings"/>
</menu>
