<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_yearly_budget_set"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/budget_input"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/label_yearly_budget" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_currency"
            android:textSize="16sp"
            android:layout_gravity="center" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/apply_to_available_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_available_budget_adjust"
        android:gravity="center_vertical"/>
</LinearLayout>