<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:weightSum="1.0">

    <TextView
        android:id="@+id/label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/label_date" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/label_description"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="5dp"
        android:text="@string/label_description" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="end">

        <TextView
            android:id="@+id/label_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_amount"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/eurosign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_currency"/>
    </LinearLayout>
</LinearLayout>