<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:paddingBottom="5dp"
    android:background="@drawable/bg_primary_light_rounded_10dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/label_account"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/default_account_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:id="@+id/topPanel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/label_description"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/label_amount"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:id="@+id/contentTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
    <LinearLayout
        android:id="@+id/sum_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sum_tx"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/display_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/eurosign"/>
            <TextView
                android:id="@+id/eurosign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:text="@string/label_currency"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
