<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_primary_light_rounded_10dp"
    android:layout_margin="2dp"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/delete_button"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_24"/>

        <TextView
            android:id="@+id/label_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:text="@string/label_description"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_sender_receiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_arrow"
            android:gravity="center"
            android:textSize="16sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="end">

            <TextView
                android:id="@+id/label_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:text="@string/label_amount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/eurosign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_currency"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>