<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:stretchColumns="0">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_account_name_new"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_account_active"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:gravity="center"
                    android:background="@color/colorSubtleDistinction" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_account_auto_renew"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tv_trigger_renew"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_account_trigger_renew"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:gravity="center"
                    android:background="@color/colorSubtleDistinction" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>